<resources>
    <string name="app_name" translatable="false">PetHouse</string>
    <string name="logo_description">PetHouse logo.</string>
    <string name="email">Email:</string>
    <string name="email_description">User\s email.</string>
    <string name="email_hint">Enter your email.</string>
    <string name="password">Password:</string>
    <string name="password_description">User\s password.</string>
    <string name="password_hint">Enter your password.</string>
    <string name="enter_button">Enter</string>
    <string name="register_button">Register</string>
    <string name="terms">By clicking on Enter or Register, I confirm that I agree with the following PetHouse conditions: [Terms of Service], [Terms and Conditions of Payment of the service], [Privacy policy] and [Policy against animal abandonment].</string>
    <string name="reqEdad">The PetHouse application can only be used by people over 18 years of age.</string>
    <string name="title_activity_home">home</string>
    <string name="desEjem">descripcion del perro con enlace a su perfil</string>
    <string name="question_name">What\'s your name?</string>
    <string name="name_registration">Name:</string>
    <string name="name_hint">Name.</string>
    <string name="surname_registration">Surname:</string>
    <string name="surname_hint">Surname.</string>
    <string name="next">Next</string>
    <string name="question_email">What email are you going to use?</string>
    <string name="question_password">Set your password</string>
    <string name="least_password">Must have at least 8 characters.</string>
    <string name="question_date">When you were born?</string>
    <string name="date_hint">01/01/2000</string>
    <string name="select_date">Select date</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_mod_mascota">modMascota</string>
    <string name="exit">Exit</string>
    <string name="birthdate">Birthdate:</string>
    <string name="birthdate_default">01/01/1990</string>
    <string name="google_maps_key">AIzaSyDOyWxvGdlUrskOk8-WuPVFTLfJ3XLGA_Y</string>
    <string name="required_field">Required field</string>
    <string name="incorrect_email_format">Incorrect email format</string>
    <string name="incorrect_password_format">Minimum 8 characters</string>
    <string name="incorrect_birthdate_format">It is required to be of legal age</string>
    <string name="title_activity_maps">Map</string>
    <string name="address_hint">Write the address of your house.</string>
    <string name="address">Home address:</string>
    <string name="address_description">Home address</string>
    <string name="question_address">What is the address of your house?</string>
</resources>