<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewHomeUserProfilePicture"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_user" />

    <TextView
        android:id="@+id/textViewHomeUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@android:string/unknownName"
        android:textColor="@color/colorPrimaryText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHomeUserProfilePicture" />

    <TextView
        android:id="@+id/textViewHomeUserBirthdateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/birthdate"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewHomeUserBirthdate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewHomeUserBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/birthdate_default"
        app:layout_constraintStart_toEndOf="@+id/textViewHomeUserBirthdateLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewHomeUserName" />

    <TextView
        android:id="@+id/textViewHomeUserEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/email"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewHomeUserEmail"
        app:layout_constraintStart_toStartOf="parent" />/>

    <TextView
        android:id="@+id/textViewHomeUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:text="@string/email_description"
        app:layout_constraintStart_toEndOf="@+id/textViewHomeUserEmailLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewHomeUserName" />

    <TextView
        android:id="@+id/textViewHomeUserPhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="Phone:"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHomeUserPhone"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewHomeUserPhone"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:text="fhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewHomeUserPhoneLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewHomeUserName" />


    <Button
        android:id="@+id/editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:drawableBottom="@android:color/holo_green_dark"
        android:text="Editar"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHomeUserPhone"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="64dp" />

    <Button
        android:id="@+id/borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="20dp"
        android:drawableBottom="@android:color/holo_green_dark"
        android:text="Borrar"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHomeUserPhone"
        tools:ignore="MissingConstraints,RtlCompat"
        android:layout_marginLeft="168dp" />


</android.support.constraint.ConstraintLayout>